# gitter-colony

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  publish-pypi.yml  publish-testpypi.yml  release-please.yml
docker/: r-parity.Dockerfile
docs/: citation.md  cli.md  index.md  installation.md  parity-validation.md  plotting.md  python-api.md  quickstart.md  reference-image-workflow.md
scripts/: build_r_parity_image.sh
src/gitter_py/: __init__.py  cli.py  constants.py  core.py  io.py  peaks.py  plate_crops.py  plate_detection.py  plate_detection_utils.py  plate_splitter.py  plate_types.py  plotting.py
tests/: test_io.py  test_parity_r_live.py  test_parity_r_sample.py  test_plotting.py  test_smoke.py  test_splitter.py
